--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -74,38 +74,15 @@
         version: 'DevOps'
         dest: '/home/ec2-user/myResto-spring'
 
-    # - name: "Build an image for MyResto"
-    #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+    - name: "create volume"
+      command: "sudo mkdir /ebsMyResto"
+      
+    - name: "mount volume"
+      command: "sudo mount /dev/xvdf /ebsMyResto/"
 
-    # - name: "test"
-    #   shell: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d "
-
+    - name: "Build an image for MyResto"
+      command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
 
     
     - name: "Docker-compose tesyt"
       shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
-      # docker_compose:
-      #   project_src: '/home/ec2-user/myResto-spring/Docker/'
-
-
-    # - name: "add pour run le script"
-    #   command: sudo chmod +x /home/ec2-user/myResto-spring/Docker/shell.sh
-
-
-    # - name: Run sh
-    #   command: chdir=/home/ec2-user/myResto-spring/Docker ./shell.sh
-
-    # - name: Go to the folder and execute command
-    #   command: chdir=/home/ec2-user/myResto-spring/Docker docker-compose up -d docker-mysql
-
-
-
-
-    
-      
-    # - name: "docker-compose up database"
-    #   command: "docker-compose up -d docker-mysql"
-
-
-    # - name: "docker-compose up for phpmyadmin and springboot app"
-    #   shell: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
