--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -83,12 +83,15 @@
     - name: "copy image "
       command: "cp -r /ebsMyResto/images /home/ec2-user/myResto-spring/Docker/images"
 
-    # - name: "Build an image for MyResto"
-    #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+    - name: "change owner images "
+      command: "sudo chown ec2-user:ec2-user /home/ec2-user/myResto-spring/Docker/images"
 
-    # - name: "Docker-compose up database"
-    #   shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql
+    - name: "Build an image for MyResto"
+      command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
 
-    # - name: "Docker-compose up phpmyadmin and springboot app"
-    #   shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
+    - name: "Docker-compose up database"
+      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql
+
+    - name: "Docker-compose up phpmyadmin and springboot app"
+      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
       
