--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #BDD
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://allan-semin.ovh:3306/myresto?serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://allan-semin.ovh:3306/myresto?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/myresto?serverTimezone=UTC
+
 spring.datasource.username = root
 spring.datasource.password = root
 
