--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -93,5 +93,5 @@
       shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql
 
     - name: "Docker-compose up phpmyadmin and springboot app"
-      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
+      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin
       
