--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 #BDD
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://allan-semin.ovh:3306/myresto?serverTimezone=UTC
-spring.datasource.url = jdbc:mysql://allan-semin.ovh:3306/myresto?serverTimezone=UTC
 
-spring.datasource.username = root
-spring.datasource.password = root
+# spring.datasource.url = jdbc:mysql://allan-semin.ovh:3306/myresto?serverTimezone=UTC
+
+# spring.datasource.username = root
+# spring.datasource.password = root
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -15,7 +20,8 @@ spring.jpa.properties.hibernate.format_sql= true
 spring.main.allow-circular-references=true
 #SERVER
 server.servlet.context-path=/myresto
-server.port=5000
+# server.port=5000
+server.port=${APP_PORT}
 server.error.whitelabel.enabled=false
 
 #FILES
